<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="Player 1 Winnings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1_1" />

        <TextView
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1_2" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/buttonP1C1Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP1C1"
                android:onClick="sendMessage" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP1C1" />

            <TextView
                android:text="@string/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewRow1Fill" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP2C6" />

            <Button
                android:text="@string/buttonP2C6Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP2C6"
                android:onClick="sendMessage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/buttonP1C2Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP1C2"
                android:onClick="sendMessage" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP1C2" />

            <TextView
                android:text="@string/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP2C5" />

            <Button
                android:text="@string/buttonP2C5Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP2C5"
                android:onClick="sendMessage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/buttonP1C3Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP1C3"
                android:onClick="sendMessage" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP1C3" />

            <TextView
                android:text="@string/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP2C4" />

            <Button
                android:text="@string/buttonP2C4Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP2C4"
                android:onClick="sendMessage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/buttonP1C4Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP1C4"
                android:onClick="sendMessage" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP1C4" />

            <TextView
                android:text="@string/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP2C3" />

            <Button
                android:text="@string/buttonP2C3Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP2C3"
                android:onClick="sendMessage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/buttonP1C5Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP1C5"
                android:onClick="sendMessage" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP1C5" />

            <TextView
                android:text="@string/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP2C2" />

            <Button
                android:text="@string/buttonP2C2Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP2C2"
                android:onClick="sendMessage" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:text="@string/buttonP1C6Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP1C6"
                android:onClick="sendMessage" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP1C6" />

            <TextView
                android:text="@string/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18" />

            <TextView
                android:text="@string/initialSeeds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewP2C1" />

            <Button
                android:text="@string/buttonP2C1Contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonP2C1"
                android:onClick="sendMessage" />
        </TableRow>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/textView2_2Contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2_2" />

            <TextView
                android:text="@string/textView2_1Contents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2_1" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
